// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo component test 1`] = `
<div>
  <h2
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Demo 
    Title
     
  </h2>
  <div>
    content
  </div>
</div>
`;

exports[`Demo component test 2`] = `
<div>
  <h2
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Demo 
    Title
     
    <a
      href="#"
    >
      #
    </a>
  </h2>
  <div>
    content
  </div>
</div>
`;

exports[`Demo component test 3`] = `
<div>
  <h2
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Demo 
    Title
     
  </h2>
  <div>
    content
  </div>
</div>
`;
